--- a/src/2_词/2.6_常见指示词和代词.md
+++ b/src/2_词/2.6_常见指示词和代词.md
@@ -1,2 +1,25 @@
 # 指示词
 
+## そこあど系指示词
+
+最基础的指示词是そこあど系指示词，そこあど系指示词由两部分组成，前面的那一部分决定是近称、中称、远称还是不定称，后面那一部分决定指代什么东西
+
+前面的部分可以是：
+
+- こ-：近称。表示**离说话人近**或属于说话人范围的事物。
+- そ-：中称。表示**离听话人近**，或说话人和听话人都能看到但距离稍远的事物，或者是前面提到过的事物。
+- あ-：远称。表示**离说话人和听话人都远**的事物，或者两人都知道的事物（超出双方当前的范围，但双方都能理解）。
+- ど-：不定称。表示疑问。
+
+后面的部分可以是：
+
+- -れ：指示代词，指代东西。
+- -こ：指示代词，指代地点。
+- -ちら：指示代词，指代方向。
+- -の：连体词，与名词结合，修饰紧挨着的名词。指示具体的事物。
+- -んな：连体词，与名词结合，修饰紧挨着的名词。指示事物的性质、状态或类型。
+- 变成长音：副词。描述方式、状态或情况，修饰动词、形容词、句子。
+
+# 人称代词
+
+【未完成】 
