--- a/src/2_词/2.4_形容词.md
+++ b/src/2_词/2.4_形容词.md
@@ -38,7 +38,7 @@
 
 | /   | 现在              | 过去                                     |
 | --- | --------------- | -------------------------------------- |
-| 肯定  | 保持不变            | 加上「でした」                                |
+| 肯定  | 保持「だ」不变            | 将「だ／です」变成「だった／でした」                                |
 | 否定  | 加上「ではない」或「じゃない」 | 先变为否定，再应用い形的规则变为过去，得到「ではなかった」或「じゃなかった」 |
 
 > 「ではない」和「じゃない」的区别主要在于使用的正式度和语境，它们的意思基本相同。
